--- a/SegundoForm/SegundoForm.csproj
+++ b/SegundoForm/SegundoForm.csproj
@@ -135,6 +135,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Modelos\Proyecto.cs" />
     <Compile Include="Modelos\Usuario.cs" />
+    <Compile Include="Vistas\Logs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\Logs.Designer.cs">
+      <DependentUpon>Logs.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Controladores\ControladorProyecto.resx">
       <DependentUpon>ControladorProyecto.cs</DependentUpon>
     </EmbeddedResource>
@@ -171,6 +177,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Vistas\Logs.resx">
+      <DependentUpon>Logs.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
