--- a/SegundoForm/SegundoForm.csproj
+++ b/SegundoForm/SegundoForm.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Controladores\ControladorUsuario.Designer.cs">
       <DependentUpon>ControladorUsuario.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modelos\ComponentesProyecto.cs" />
     <Compile Include="Modelos\Empleado.cs" />
     <Compile Include="Vistas\Form1.cs">
       <SubType>Form</SubType>
@@ -100,6 +101,12 @@
     </Compile>
     <Compile Include="Vistas\Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Vistas\FrmComponentesProyectos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\FrmComponentesProyectos.Designer.cs">
+      <DependentUpon>FrmComponentesProyectos.cs</DependentUpon>
     </Compile>
     <Compile Include="Vistas\FrmEmpleados.cs">
       <SubType>Form</SubType>
@@ -152,6 +159,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Vistas\Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\FrmComponentesProyectos.resx">
+      <DependentUpon>FrmComponentesProyectos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vistas\FrmEmpleados.resx">
       <DependentUpon>FrmEmpleados.cs</DependentUpon>
