--- a/SegundoForm/App.config
+++ b/SegundoForm/App.config
@@ -7,6 +7,9 @@
         <add name="SegundoForm.Properties.Settings.Database1ConnectionString"
             connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Vistas\Database1.mdf;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="SegundoForm.Properties.Settings.baseDatosConnectionString"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\baseDatos.mdf;Integrated Security=True;Connect Timeout=30"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
