--- a/SegundoForm/SegundoForm.csproj
+++ b/SegundoForm/SegundoForm.csproj
@@ -92,10 +92,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="baseDatosDataSet.Designer.cs">
+    <Compile Include="BaseDatosDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>baseDatosDataSet.xsd</DependentUpon>
+      <DependentUpon>BaseDatosDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="Controladores\ControladorCliente.cs" />
     <Compile Include="Controladores\ControladorComponentes.cs" />
@@ -242,16 +242,16 @@
     <EmbeddedResource Include="Vistas\Logs.resx">
       <DependentUpon>Logs.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="baseDatosDataSet.xsc">
-      <DependentUpon>baseDatosDataSet.xsd</DependentUpon>
+    <None Include="BaseDatosDataSet.xsc">
+      <DependentUpon>BaseDatosDataSet.xsd</DependentUpon>
     </None>
-    <None Include="baseDatosDataSet.xsd">
+    <None Include="BaseDatosDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>baseDatosDataSet.Designer.cs</LastGenOutput>
+      <LastGenOutput>BaseDatosDataSet.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
-    <None Include="baseDatosDataSet.xss">
-      <DependentUpon>baseDatosDataSet.xsd</DependentUpon>
+    <None Include="BaseDatosDataSet.xss">
+      <DependentUpon>BaseDatosDataSet.xsd</DependentUpon>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -294,12 +294,12 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="baseDatos.mdf">
+    <Content Include="Vistas\BaseDatos.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="baseDatos_log.ldf">
+    <Content Include="Vistas\BaseDatos_log.ldf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <DependentUpon>baseDatos.mdf</DependentUpon>
+      <DependentUpon>BaseDatos.mdf</DependentUpon>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
