BBDD bien hecho

--- a/SegundoForm/App.config
+++ b/SegundoForm/App.config
@@ -11,7 +11,7 @@
             connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\baseDatos.mdf;Integrated Security=True;Connect Timeout=30"
             providerName="System.Data.SqlClient" />
         <add name="SegundoForm.Properties.Settings.BaseDatosConnectionString1"
-            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Vistas\BaseDatos.mdf;Integrated Security=True"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\BaseDatos.mdf;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
