--- a/SegundoForm/SegundoForm.csproj
+++ b/SegundoForm/SegundoForm.csproj
@@ -92,15 +92,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseDatosDataSet.Designer.cs">
+    <Compile Include="baseDatosDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>BaseDatosDataSet.xsd</DependentUpon>
-    </Compile>
-    <Compile Include="baseDatosDataSet1.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>baseDatosDataSet1.xsd</DependentUpon>
+      <DependentUpon>baseDatosDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="Controladores\ControladorCliente.cs" />
     <Compile Include="Controladores\ControladorComponentes.cs" />
@@ -262,27 +257,16 @@
     <EmbeddedResource Include="Vistas\Logs.resx">
       <DependentUpon>Logs.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="BaseDatosDataSet.xsc">
-      <DependentUpon>BaseDatosDataSet.xsd</DependentUpon>
+    <None Include="baseDatosDataSet.xsc">
+      <DependentUpon>baseDatosDataSet.xsd</DependentUpon>
     </None>
-    <None Include="BaseDatosDataSet.xsd">
+    <None Include="baseDatosDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>BaseDatosDataSet.Designer.cs</LastGenOutput>
+      <LastGenOutput>baseDatosDataSet.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
-    <None Include="BaseDatosDataSet.xss">
-      <DependentUpon>BaseDatosDataSet.xsd</DependentUpon>
-    </None>
-    <None Include="baseDatosDataSet1.xsc">
-      <DependentUpon>baseDatosDataSet1.xsd</DependentUpon>
-    </None>
-    <None Include="baseDatosDataSet1.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>baseDatosDataSet1.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="baseDatosDataSet1.xss">
-      <DependentUpon>baseDatosDataSet1.xsd</DependentUpon>
+    <None Include="baseDatosDataSet.xss">
+      <DependentUpon>baseDatosDataSet.xsd</DependentUpon>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
