--- a/SegundoForm/SegundoForm.csproj
+++ b/SegundoForm/SegundoForm.csproj
@@ -163,6 +163,12 @@
     <Compile Include="Vistas\FrmImpresion.Designer.cs">
       <DependentUpon>FrmImpresion.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vistas\FrmImprimirBBDD.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\FrmImprimirBBDD.Designer.cs">
+      <DependentUpon>FrmImprimirBBDD.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vistas\FrmNuevoCliente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -229,6 +235,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Vistas\FrmImpresion.resx">
       <DependentUpon>FrmImpresion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\FrmImprimirBBDD.resx">
+      <DependentUpon>FrmImprimirBBDD.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vistas\FrmNuevoCliente.resx">
       <DependentUpon>FrmNuevoCliente.cs</DependentUpon>
